# logistic_regression_cpp

./: CMakeLists.txt
data/: blobs.py  preprocess_titanic.py
include/: data_loader.h  logistic_regression.h
src/: data_loader.cpp  logistic_regression.cpp
tests/: test_logistic_regression.cpp
